Add ICLR 2016-2025 main JSONL data and update LFS config
Added data/output/iclr2016-2025_main.jsonl and configured Git LFS to track .jsonl files. Updated .gitignore to stop ignoring .jsonl and .jsonl.gz files.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 data/output/*.gz filter=lfs diff=lfs merge=lfs -text
+data/output/*.jsonl filter=lfs diff=lfs merge=lfs -text
 data/output/iclr2016-2025_main.jsonl.gz filter=lfs diff=lfs merge=lfs -text
+data/output/iclr2016-2025_main.jsonl filter=lfs diff=lfs merge=lfs -text
