Improve review extraction and API compatibility
Enhanced review and meta-review extraction logic to robustly handle both API v1 and v2 formats, including various field name variations and edge cases across years. Improved handling of invitations, filtering of author responses, and construction of review text from multiple fields. Updated API client to better support 2016-2017 review fetching and to avoid redundant review queries for v2. Added error handling and debugging output in paper record construction. Updated .gitignore to exclude additional files and directories.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,13 @@
 data/output/.DS_Store
 .DS_Store
 data/.DS_Store
+venv_3.11
+__pycache__/
+claude.md
+test_2016_meta.py
+test_2023_content.py
+test_2024_api_structure.py
+test_api.py
+test_meta_review_extraction.py
+test_review_extraction.py
+validate_data.py
